# world_canvas

./: .cproject  .project  CMakeLists.txt  README.md  package.xml  world_canvas.rosinstall
launch/: add_map.launch  annotations_server.launch
rqt_annotation_data/: CHANGELOG.rst  mainpage.dox  package.xml  plugin.xml
rqt_annotation_data/resource/: MsgEditor.ui  Publisher.ui
rqt_annotation_data/src/rqt_annotation_data/: message_tree_model.py  message_tree_widget.py  msg_editor.py  msg_editor_widget.py  publisher_widget.py
rqt_world_editor/: .project  CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_world_editor/resource/: load_map.launch  message.ui  world_editor.ui
rqt_world_editor/scripts/: rqt_world_editor
rqt_world_editor/src/rqt_world_editor/: editor_plugin.py  map_view.py  message.py  msg_tree_widget.py  msg_widget.py
scripts/: save_tables.py  save_walls.py
src/: annotations_server.cpp  map_manager.cpp
world_canvas_editor/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
world_canvas_editor/include/world_canvas_editor/: annotations.hpp  editor_panel.hpp  map_loader.hpp  worlds_list.hpp
world_canvas_editor/launch/: world_canvas_editor.launch
world_canvas_editor/rviz/: world_canvas_editor.rviz
world_canvas_editor/src/: annotations.cpp  annotations.hpp  editor_panel.cpp  editor_panel.hpp  plant_flag_tool.cpp  plant_flag_tool.h  worlds_list.cpp  worlds_list.hpp
world_canvas_editor/src/ui/: editor_panel.ui
world_canvas_server/: .cproject  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml
world_canvas_server/launch/: add_map.launch  py_annotations_server.launch  world_canvas_server.launch
world_canvas_server/scripts/: add_map.py  export.py  get_any.py  get_columns.py  get_markers.py  get_tables.py  get_walls.py  import.py  load_walls.py  save_all.sh  save_columns.py  save_map.py  save_markers.py  save_tables.py  save_walls.py  set_keyword.py  set_relationship.py
world_canvas_server/src/: annotations_server.py  map_manager.cpp  map_manager.py  yaml_database.py
world_canvas_server/test/: test_world_canvas_server.py
world_canvas_server/test/annotations/: full_db.yaml
