<package>
  <name>semantic_map_store</name>
  <version>0.1.0</version>
  <description>
    Storage manager for semantic maps.
  </description>

  <author email="jsantossimon@gmail.com">Jorge Santos</author>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/semantic_map_store</url>
  <url type="repository">https://github.com/corot/semantic_map_store</url>
  <url type="bugtracker">https://github.com/corot/semantic_map_store/issues</url>
    
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>semantic_map_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>semantic_map_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>

