<?xml version="1.0"?>
<package>
  <name>rqt_world_editor</name>
  <version>0.1.0</version>
  <description>The rqt_world_editor package</description>

  <author email="jsantossimon@gmail.com">Jorge Santos</author>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rqt_world_editor</url>
  <url type="repository">https://github.com/corot/world_canvas</url>
  <url type="bugtracker">https://github.com/corot/world_canvas/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>